<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inapp_loginbackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_shade"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/MiKandiTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/grey_light" />


    <ToggleButton
        android:id="@+id/btn_login_toggle"
        style="@style/MiKandiTheme.Button.Green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textOff="@string/btn_login"
        android:textOn="@string/btn_logout"
        app:layout_constraintBottom_toTopOf="@+id/main_btn_buyGold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />


    <Button
        android:id="@+id/main_btn_buyGold"
        style="@style/MiKandiTheme.Button.Transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/main_btn_make_purchase"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/buy_gold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_toggle" />

    <Button
        android:id="@+id/main_btn_make_purchase"
        style="@style/MiKandiTheme.Button.Transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/purchase_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_list_purchases" />

    <Button
        android:id="@+id/main_btn_list_purchases"
        style="@style/MiKandiTheme.Button.Transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/list_purchases"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_buyGold" />

    <Button
        android:id="@+id/main_btn_tokencheck"
        style="@style/MiKandiTheme.Button.Transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/main_btn_make_purchase"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/check_purchase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_make_purchase" />

    <Button
        android:id="@+id/main_btn_installer"
        style="@style/MiKandiTheme.Button.Transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/main_btn_list_purchases"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/install"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_adcheck" />


    <Button
        android:id="@+id/main_btn_adcheck"
        style="@style/MiKandiTheme.Button.Transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/main_btn_installer"
        android:layout_alignEnd="@id/main_btn_installer"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ads"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_tokencheck" />

</android.support.constraint.ConstraintLayout>